--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -25,9 +25,7 @@
 
     h1,
     p {
-        color: black;
         text-align: center;
-        font-family: $text;
         margin-bottom: 20px;
     }
 }
@@ -70,6 +68,7 @@
             border-radius: 20px;
             font-family: $text;
             background-color: #F7F7F7;
+
             i {
                 color: grey;
                 font-size: 20px;
@@ -84,10 +83,12 @@
                 font-weight: 600;
                 text-align: center;
             }
+
             &:hover,
             &:focus,
             &:active {
                 background-color: #F5EDFF;
+
                 i {
                     color: $purple;
                 }
@@ -110,26 +111,28 @@
 
     .cards-list {
         margin: 30px 0px 30px 0px;
+
         a {
             color: black;
             text-decoration: none;
+
             .card {
                 display: flex;
                 margin-bottom: 20px;
                 position: relative;
                 flex-direction: column;
                 background-color: $white;
-        
+
                 img {
                     height: 300px;
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
-        
+
                     @media screen and (max-width: 480px) {
                         height: 210px;
                     }
                 }
-        
+
                 .new {
                     right: 0;
                     width: 90px;
@@ -137,7 +140,7 @@
                     position: absolute;
                     margin: 2% 1% 0% 0%;
                     background-color: $green;
-        
+
                     p {
                         color: #6cad9d;
                         font-size: 15px;
@@ -145,21 +148,22 @@
                         text-align: center;
                         font-family: $text;
                     }
+
                     @media screen and (max-width: 767px) {
                         margin: 4% 3% 0% 0%;
                     }
                 }
-        
+
                 .card-body {
                     padding: 15px 20px 25px 20px;
-        
+
                     h5 {
                         color: black;
                         font-size: 20px;
                         font-weight: 600;
                         font-family: $text;
                     }
-        
+
                     p {
                         color: black;
                         font-size: 16px;
@@ -172,62 +176,27 @@
     }
 }
 
-.present {
-    height: 68vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    h1 {
-        color: rgba(0, 0, 0, 0);
-    }
-    @media screen and (max-width: 480px) {
-        height: 33vh !important;
-    }
-    @media screen and (max-width: 1024px) {
-        height: 49vh;
-    }
-}
-.franc {
-    background-image: url("../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-    @media screen and (max-width: 1024px) {
-        background-position: bottom;
-    }
-}
-.note {
-    background-image: url("../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-}
-.gout {
-    background-image: url("../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-}
-.delice {
-    background-position: bottom;
-    background-image: url("../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+.int,
+.restau {
+    background-color: #EAEAEA;
 }
 
-.menu-restau {
-    margin-top: -8%;
-    position: relative;
-    background-color: #FFFFFF;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    padding: 50px 30px 50px 30px;
-    @media screen and (max-width: 767px) {
-        margin-top: -15%;
-        padding: 30px 20px 30px 20px !important;
-    }
-    .title {
-        display: flex;
-        .favoris {
-            right: 23px;
-        }
-    }
+.btn-princ {
+    @extend %btn-princ;
 }
-.commandes {
-    h6 {
-        display: none;
-    }
-    button {
-        width: 200px;
-        margin-bottom: 50px;
-    }
+
+.favoris-ind {
+    margin-top: -40px;
+    margin-right: 20px;
+}
+
+h1,
+h2,
+h3 {
+    @extend %title;
+}
+
+p {
+    color: black;
+    font-family: $text;
 }
