--- a/assets/scss/utils/_extensions.scss
+++ b/assets/scss/utils/_extensions.scss
@@ -1,42 +1,6 @@
-// Graphic Charter
+// Card restaurant 
 
-$purple: #9356DC;
-$pink: #FF79DA;
-$green: #99E2D0;
-$white: #FFFFFF;
-
-$title: 'Shrikhand', cursive;
-$text: 'Roboto', sans-serif;
-
-// Color for the loader
-
-$dot-1: #3f2064;
-$dot-2: #d85bb5;
-$dot-3: #000000;
-$dot-4: #95e9d4;
-
-// Générales
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    max-width: 1980px;
-}
-
-.int,
-.restau {
-    background-color: #EAEAEA;
-}
-
-img {
-    object-fit: cover;
-}
-
-.h-title {
+%h-title {
     color: black;
     font-size: 32px;
     font-weight: 600;
@@ -47,7 +11,7 @@ img {
     }
 }
 
-.m-title {
+%m-title {
     width: 53px;
     color: black;
     font-size: 18px;
@@ -59,25 +23,7 @@ img {
     font-family: $text;
 }
 
-h2,
-h3 {
-    color: black;
-    font-size: 22px;
-    font-weight: 600;
-    font-family: $text;
-}
-
-p {
-    color: black;
-    font-family: $text;
-}
-
-.shad {
-    border-radius: 20px;
-    box-shadow: 0px 0px 16px #bebebe;
-}
-
-.btn-princ {
+%btn-princ {
     text-align: center;
 
     button {
@@ -91,80 +37,14 @@ p {
     }
 }
 
-.btn-menu {
-    width: 100%;
-    border: none;
-    padding: 10px;
-    display: flex;
-    cursor: pointer;
+%title {
     color: black;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    flex-direction: column;
-    background-color: #FFFFFF;
+    font-size: 22px;
+    font-weight: 600;
     font-family: $text;
-
-    .tit-c {
-        font-size: 18px;
-        color: black;
-        font-weight: 800;
-        text-align: left;
-        font-family: $text;
-    }
-
-    .txt {
-        display: flex;
-
-        .text {
-            font-size: 18px;
-            font-weight: 300;
-            font-family: $text;
-
-            @media screen and (max-width: 767px) {
-                font-size: 15px;
-            }
-        }
-    }
-
-    .valid-btn {
-        right: 50px;
-        margin-top: 11px;
-        position: absolute;
-        .price {
-            font-size: 18px;
-            font-weight: 800;
-            font-family: $text;
-            @media screen and (max-width: 767px) {
-                margin-right: -10px;
-            }
-        }
-        .valid {
-            
-            margin-left: 17px;
-            margin-right: -21px;
-            padding: 26px 20px 23px 20px;
-            border-top-right-radius: 20px;
-            border-bottom-right-radius: 20px;
-            background-color: $green;
-            i {
-                color: #FFFFFF;
-                font-size: 20px;
-            }
-            @media screen and (max-width: 767px) {
-                margin-right: -30px;
-                padding: 26px 20px 20px 20px;
-            }
-        }
-        &:hover {
-            .valid {
-                display: block !important;
-            }
-        }
-        
-    }
 }
 
-.favoris {
+%favoris {
     right: 0;
     position: absolute;
 
@@ -189,7 +69,67 @@ p {
         }
     }
 }
-.favoris-ind {
-    margin-top: -40px;
-    margin-right: 20px;
+
+%btn-menu {
+    width: 100%;
+    border: none;
+    padding: 10px;
+    display: flex;
+    cursor: pointer;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    font-family: $text;
+    .tit-c {
+        font-size: 18px;
+        color: black;
+        font-weight: 800;
+        text-align: left;
+        font-family: $text;
+    }
+    .txt {
+        display: flex;
+        .text {
+            font-size: 18px;
+            font-weight: 300;
+            font-family: $text;
+            @media screen and (max-width: 767px) {
+                font-size: 15px;
+            }
+        }
+    }
+    .valid-btn {
+        right: 30px;
+        margin-top: 11px;
+        position: absolute;
+        .price {
+            font-size: 18px;
+            font-weight: 800;
+            font-family: $text;
+            @media screen and (max-width: 767px) {
+                margin-right: -10px;
+            }
+        }
+        .valid {
+            padding: 25px 20px 24px 20px;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            background-color: $green;
+            i {
+                color: #FFFFFF;
+                font-size: 20px;
+            }
+            &:hover {
+                i {
+                    -webkit-transform: rotateZ('360deg');
+                    -moz-transform: rotateZ('360deg');
+                    transform: rotateZ('360deg');
+                }
+            }
+        }
+        @media screen and (max-width: 767px) {
+            right: 20px;
+        }
+    }
 }
