--- a/assets/scss/utils/_animations.scss
+++ b/assets/scss/utils/_animations.scss
@@ -1,53 +1,87 @@
 // Animation for the valid button
 
 @keyframes valid-icon {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+// Progressive 
+
+.fade-in {
+  animation: fadeIn ease 3s;
+}
+.fade-one {
+  animation-delay: 0.1s;
+}
+.fade-two {
+  animation-delay: 0.2s;
+}
+.fade-three {
+  animation-delay: 0.3s;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 // Animation for the dots & loader
 
 @keyframes wave-loader {
-    0%,
-    100% {
-      transform: translateY(-30px);
-    }
-    25% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(0);
-    }
-    75% {
-      transform: translateY(0);
-    }
+
+  0%,
+  100% {
+    transform: translateY(-30px);
+  }
+
+  25% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(0);
+  }
+
+  75% {
+    transform: translateY(0);
+  }
 }
 
 @keyframes wave-color {
-    0%,
-    100% {
-      background: $dot-1;
-    }
-    25% {
-      background: $dot-2;
-    }
-    50% {
-      background: $dot-3;
-    }
-    75% {
-      background: $dot-4;
-    }
+
+  0%,
+  100% {
+    background: $dot-1;
+  }
+
+  25% {
+    background: $dot-2;
+  }
+
+  50% {
+    background: $dot-3;
+  }
+
+  75% {
+    background: $dot-4;
+  }
 }
 
 @keyframes fade-loader {
+
   0%,
   50% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
     z-index: -1;
