--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -32,9 +32,49 @@ img {
     border-radius: 20px;
     box-shadow: 0px 0px 16px #bebebe;
 }
-.btn-menu {
-    @extend %btn-menu;
-}
 .favoris {
     @extend %favoris;
+}
+.btn-menu {
+    width: 100%;
+    border: none;
+    padding: 10px;
+    display: flex;
+    cursor: pointer;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    font-family: $text;
+    .tit-c {
+        font-size: 18px;
+        color: black;
+        font-weight: 800;
+        text-align: left;
+        font-family: $text;
+    }
+    .txt {
+        display: flex;
+        .text {
+            font-size: 18px;
+            font-weight: 300;
+            font-family: $text;
+            @media screen and (max-width: 767px) {
+                font-size: 15px;
+            }
+        }
+    }
+    .valid-btn {
+        right: 30px;
+        margin-top: 11px;
+        position: absolute;
+        .price {
+            font-size: 18px;
+            font-weight: 800;
+            font-family: $text;
+            @media screen and (max-width: 767px) {
+                margin-right: -10px;
+            }
+        }
+    }
 }
