--- a/assets/scss/utils/_animations.scss
+++ b/assets/scss/utils/_animations.scss
@@ -12,24 +12,28 @@
 
 // Progressive 
 
-.fade-in {
-  animation: fadeIn ease 3s;
-}
-.fade-one {
-  animation-delay: 0.1s;
-}
-.fade-two {
-  animation-delay: 0.2s;
-}
-.fade-three {
-  animation-delay: 0.3s;
-}
-@keyframes fade-in {
+@keyframes moveLeft {
   0% {
     opacity: 0;
+    transform: translateY(-100px);
+  }
+  80% {
+    transform: translate(0px, 2%);
   }
   100% {
     opacity: 1;
+    transform: translate(0);
+  }
+}
+
+// Anime Icon 
+
+@keyframes rotateIcon {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
