--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -1,12 +1,12 @@
 // Graphic Charter
 
-$purple: #9356DC;
-$pink: #FF79DA;
-$green: #99E2D0;
-$white: #FFFFFF;
+$purple: #9356dc;
+$pink: #ff79da;
+$green: #99e2d0;
+$white: #ffffff;
 
-$title: 'Shrikhand', cursive;
-$text: 'Roboto', sans-serif;
+$title: "Shrikhand", cursive;
+$text: "Roboto", sans-serif;
 
 // Color for the loader
 
@@ -18,63 +18,137 @@ $dot-4: #95e9d4;
 // Générales
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .container {
-    max-width: 1980px;
+  max-width: 1980px;
 }
 img {
-    object-fit: cover;
+  object-fit: cover;
 }
 .shad {
-    border-radius: 20px;
-    box-shadow: 0px 0px 16px #bebebe;
+  border-radius: 20px;
+  box-shadow: 0px 0px 16px #bebebe;
 }
 .favoris {
-    @extend %favoris;
+  @extend %favoris;
 }
 .btn-menu {
-    width: 100%;
-    border: none;
-    padding: 10px;
-    display: flex;
-    cursor: pointer;
-    margin-bottom: 10px;
-    border-radius: 20px;
-    flex-direction: column;
-    background-color: #FFFFFF;
+  width: 100%;
+  border: none;
+  padding: 10px;
+  display: flex;
+  cursor: pointer;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  flex-direction: column;
+  color: black !important;
+  background-color: #ffffff;
+  font-family: $text;
+  .tit-c {
+    font-size: 18px;
+    font-weight: 800;
+    text-align: left;
+    color: black !important;
     font-family: $text;
-    .tit-c {
-        font-size: 18px;
-        color: black;
-        font-weight: 800;
-        text-align: left;
-        font-family: $text;
+  }
+  .txt {
+    display: flex;
+    .text {
+      font-size: 18px;
+      font-weight: 300;
+      color: black !important;
+      font-family: $text;
+      @media screen and (max-width: 767px) {
+        font-size: 15px;
+      }
     }
-    .txt {
-        display: flex;
-        .text {
-            font-size: 18px;
-            font-weight: 300;
-            font-family: $text;
-            @media screen and (max-width: 767px) {
-                font-size: 15px;
-            }
-        }
+  }
+  .valid-btn {
+    right: 30px;
+    margin-top: 11px;
+    position: absolute;
+    transition: all 0.3s ease-out;
+    .valid {
+      display: none;
+      .fa-circle-check {
+        font-size: 22px;
+        color: #ffffff;
+      }
     }
-    .valid-btn {
-        right: 30px;
-        margin-top: 11px;
-        position: absolute;
-        .price {
-            font-size: 18px;
-            font-weight: 800;
-            font-family: $text;
-            @media screen and (max-width: 767px) {
-                margin-right: -10px;
-            }
-        }
+    .price {
+      font-size: 18px;
+      font-weight: 800;
+      margin-right: 10px;
+      font-family: $text;
     }
+  }
+  &:focus,
+  &:active {
+    .price {
+      margin-right: 45px;
+    }
+    .valid {
+      top: -44px;
+      width: 50px;
+      right: -38px;
+      display: block;
+      position: relative;
+      padding: 25px 5px 19px 5px;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+      background-color: $green;
+      @media screen and (max-width: 767px) {
+        padding: 25px 5px 15px 5px;
+      }
+      .fa-circle-check {
+        animation: rotateIcon 2s; 
+      }
+    }
+  }
+}
+.btn-one, 
+.btn-two, 
+.btn-three,
+.btn-four,
+.btn-five,
+.btn-six,
+.btn-seven,
+.btn-eight,
+.btn-nine,
+.btn-ten {
+  animation-name: moveLeft;
+  animation-duration: 2s;
+}
+.btn-one {
+  animation-delay: 2s;
+}
+.btn-two {
+  animation-delay: 3s;
+}
+.btn-three {
+  animation-delay: 4s;
+}
+.btn-four {
+  animation-delay: 5s;
+}
+.btn-five {
+  animation-delay: 6s;
+}
+.btn-six {
+  animation-delay: 7s;
+}
+.btn-seven {
+  animation-delay: 8s;
+}
+.btn-eight {
+  animation-delay: 9s;
+}
+.btn-nine {
+  animation-delay: 10s;
+}
+.btn-ten {
+  animation-delay: 11s;
 }
