--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,6 +463,7 @@ img {
   right: 0;
   width: 90px;
   padding: 6px;
+  border-radius: 4px;
   position: absolute;
   margin: 2% 1% 0% 0%;
   background-color: #99e2d0;
