--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -137,6 +137,7 @@
                     right: 0;
                     width: 90px;
                     padding: 6px;
+                    border-radius: 4px;
                     position: absolute;
                     margin: 2% 1% 0% 0%;
                     background-color: $green;
