--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -33,7 +33,7 @@ img {
   box-shadow: 0px 0px 16px #bebebe;
 }
 .shad-command {
-  box-shadow: 0px 0px 8px 2px #585353;
+  box-shadow: 0px 0px 8px #a7a6a6;
 }
 .favoris {
   @extend %favoris;
