--- a/assets/scss/utils/_extensions.scss
+++ b/assets/scss/utils/_extensions.scss
@@ -31,6 +31,7 @@
         padding: 15px;
         font-size: 15px;
         color: $white;
+        margin-top: 25px;
         border-radius: 50px;
         font-family: $text;
         background: linear-gradient($pink, $purple);
